# vinte-uno

./: .bumpversion.cfg  .flake8  .gitignore  .pylintrc  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  mypy.ini  pyproject.toml  tox.ini  vinte-uno.graphml
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_vinte_uno.py
vinte_uno/: __init__.py  vinte_uno.py
